Fixed issue with horizontal scroll

--- a/persice_app/src/assets/css/mobile.css
+++ b/persice_app/src/assets/css/mobile.css
@@ -2844,8 +2844,10 @@ html.fusion {
 html,
 body {
   height: 100%;
-  /*overflow-y: scroll;*/
-  -webkit-overflow-scrolling: touch
+}
+
+body {
+  -webkit-overflow-scrolling: touch;
 }
 
 body.bg-gray {
